--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "browserslist": "^4.23.0",
     "live-server": "^1.2.2",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "caniuse-lite": "^1.0.30001617"
   }
 }
